--- a/FileMange/FileMange.csproj
+++ b/FileMange/FileMange.csproj
@@ -80,12 +80,20 @@
       <HintPath>packages\ComponentFactory.Krypton.Workspace.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\CommonPro.cs" />
+    <Compile Include="Controls\ReaderPage.cs" />
+    <Compile Include="Controls\ReaderPage.Designer.cs">
+      <DependentUpon>ReaderPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Data\FileNode.cs" />
+    <Compile Include="Data\FolderNode.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +102,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Controls\ReaderPage.resx">
+      <DependentUpon>ReaderPage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>MainForm.cs</DependentUpon>
