Add the Delete file and delete folder

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,24 @@
 .vs/slnx.sqlite
 *.vsidx
 FileMange/.vs/FileMange/v17/.suo
+Bin/Common/CommonPro.cs
+Bin/ComponentFactory.Krypton.Design.dll
+Bin/ComponentFactory.Krypton.Design.pdb
+Bin/ComponentFactory.Krypton.Docking.dll
+Bin/ComponentFactory.Krypton.Docking.pdb
+Bin/ComponentFactory.Krypton.Navigator.dll
+Bin/ComponentFactory.Krypton.Navigator.pdb
+Bin/ComponentFactory.Krypton.Ribbon.dll
+Bin/ComponentFactory.Krypton.Ribbon.pdb
+Bin/ComponentFactory.Krypton.Toolkit.dll
+Bin/ComponentFactory.Krypton.Toolkit.pdb
+Bin/ComponentFactory.Krypton.Workspace.dll
+Bin/ComponentFactory.Krypton.Workspace.pdb
+Bin/Controls/ReaderPage.cs
+Bin/Controls/ReaderPage.Designer.cs
+Bin/Controls/ReaderPage.resx
+Bin/Data/FileNode.cs
+Bin/Data/FolderNode.cs
+Bin/FileManage.exe
+Bin/FileManage.pdb
+FileMange/.vs/FileMange/FileContentIndex/read.lock
