--- a/FileMange/app.config
+++ b/FileMange/app.config
@@ -2,6 +2,6 @@
 <configuration>
 	<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup>
 	<appSettings>
-		<add key="FolderDir" value="E:\GitClone\FileManage\FileMange\FileDirectory" />
+		<add key="FolderDir" value="E:\GitClone\FileManage\FileMange\目标特性库" />
 	</appSettings>
 </configuration>
